--- a/WAD DEVELOPMENT/bootstrap/index.html
+++ b/WAD DEVELOPMENT/bootstrap/index.html
@@ -104,6 +104,57 @@
                 <p>XML/XSD Table here with article's.</p>
             </div>
         </div>
+        
+              <table cellspacing="30" style="margin: 0 auto;">
+         <tr>
+            <td align="center" valign="bottom">
+               <img src="images/thumbnails/cityscapes/alley in florence.gif" />
+               <p>Alley in Florence</p>
+               <p>15 X 20 in.</p>
+               <p>400 $</p>
+            </td>
+            <td align="center" valign="bottom">
+               <img src="images/thumbnails/cityscapes/christmas in new york.gif" />
+               <p>Christmas in New York</p>
+               <p>12 X 14 in.</p>
+               <p>250 $</p>
+            </td>
+            <td align="center" valign="bottom">
+               <img src="images/thumbnails/cityscapes/new york new york!.gif" />
+               <p>New York, New York</p>
+               <p>21 X 29 in.</p>
+               <p>495 $</p>
+            </td>
+            <td align="center" valign="bottom">
+               <img src="images/thumbnails/cityscapes/philly 1.gif" />
+               <p>30th Street Station</p>
+               <p>10 X 11 in.</p>
+               <p>SOLD</p>
+            </td>
+         </tr>
+      </table>
+      <table cellspacing="30" style="margin: 0 auto;">
+         <tr>
+            <td align="center" valign="bottom">
+               <img src="images/thumbnails/flora/plumeria.gif" />
+               <p>Plumeria</p>
+               <p>14 X 20 in.</p>
+               <p />
+            </td>
+            <td align="center" valign="bottom">
+               <img src="images/thumbnails/flora/red leaf.gif" />
+               <p>Tropical in Red</p>
+               <p>14 X 20 in.</p>
+               <p>SOLD</p>
+            </td>
+            <td align="center" valign="bottom">
+               <img src="images/thumbnails/flora/sunflower.gif" />
+               <p>Sunflower</p>
+               <p>14 X 20 in.</p>
+               <p />
+            </td>
+         </tr>
+      </table>
 
         <hr>
 
