--- a/WAD DEVELOPMENT/bootstrap/index.html
+++ b/WAD DEVELOPMENT/bootstrap/index.html
@@ -38,10 +38,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">About</a>
+                        <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="#">Articles</a>
+                        <a href="article.html">Articles</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
@@ -68,7 +68,7 @@
                
                 <div class="fill" style="background-image:url('http://media.skynews.com/media/images/generated/2015/11/29/432799/default/v2/fury3-1-589x442.jpg');"></div>
                 <div class="carousel-caption1">
-                    <h2 style="color:grey; font-size:24px; margin-bottom: 20px">Tyson Heavy Weight Champion</h2>
+                    <h2 style="color:; font-size:24px; margin-bottom: 20px">Tyson Heavy Weight Champion</h2>
                 </div>
             </div>
             <div class="item">
