--- a/WAD DEVELOPMENT/bootstrap/index.html
+++ b/WAD DEVELOPMENT/bootstrap/index.html
@@ -101,7 +101,42 @@
         <div class="row">
             <div class="col-lg-9">
                 <h1>News Articles</h1>
-                <p>XML/XSD Table here with article's.</p>
+               <table style="margin: 0 auto;">
+	  <table  align="center" valign="bottom" border="1">
+         <tr>
+            <td width="20%" height="20%" >
+			
+               <img style="height: 100px; width: 100px" src="g8.jpg" />
+            </td>
+            <td style="padding-left:10px;padding-right:10px" width="20%" Height="20%" >
+               <img style="height: 100px; width: 100px" src="Green energy.jpg" />
+            </td>
+            <td width="20%" Height="20%">
+               <img style="height: 100px; width: 100px" src="HouseFire.jpg" />
+            </td>
+            <td width="20%" Height="20%">
+               <img style="height: 100px; width: 100px" src="ISIS.jpg" />
+            </td>
+         </tr>
+      </table>
+      <table cellspacing="30" style="margin: 0;">
+	  <table align="center" valign="bottom" border="1">
+         <tr>
+            <td width="20%" Height="20%">
+			
+               <img style="height: 100px; width: 100px" src="Jail.jpg" />
+            </td>
+            <td width="20%" Height="20%" align="center" valign="bottom">
+               <img style="height: 100px; width: 100px" src="Klitschko-tickets.jpg" />
+            </td>
+            <td width="20%" Height="20%" align="center" valign="bottom">
+               <img style="height: 100px; width: 100px" src="paris.jpg" />
+            </td>
+            <td width="20%" Height="20%" align="center" valign="bottom">
+               <img style="height: 100px; width: 100px" src="Russia.jpg" />
+            </td>
+         </tr>
+      </table>
             </div>
         </div>
 
