--- a/WAD DEVELOPMENT/bootstrap/contact.html
+++ b/WAD DEVELOPMENT/bootstrap/contact.html
@@ -51,13 +51,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">About</a>
+                        <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="#">Articles</a>
+                        <a href="article.html">Articles</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -129,7 +129,7 @@
 							
 							<div class="col-md-6">		
 								<div id="input_message" class="col-md-12">
-										<textarea id="comments" class="form-control" name="message" rows="8" placeholder="Your Message ..."></textarea>
+										<textarea id="comments" class="form-control" name="message" rows="9" placeholder="Your Message ..."></textarea>
 									</div> 
 								</div>
 									<!-- Submit Button -->
@@ -161,17 +161,7 @@
 				  <strong><u>Email</u><br>
 				  <a href="mailto:#">news@gmail.com</a></strong>
 				</address>	
-				<!-- /Section: contact
-				<address>
-				  <strong>We're on social networks</strong><br>
-                       	<ul class="company-social">
-                            <li class="social-facebook"><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                            <li class="social-twitter"><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                            <li class="social-dribble"><a href="#" target="_blank"><i class="fa fa-dribbble"></i></a></li>
-                            <li class="social-google"><a href="#" target="_blank"><i class="fa fa-google-plus"></i></a></li>
-                        </ul>	
-				</address>					
-			   -->
+
 			</div>	
 		</div>
     </div>
