--- a/WAD DEVELOPMENT/bootstrap/article.html
+++ b/WAD DEVELOPMENT/bootstrap/article.html
@@ -31,13 +31,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">News</a>
+                <a class="navbar-brand" href="index.html">News</a>
             </div>
            
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">About</a>
+                        <a href="about.html">About</a>
                     </li>
                     <li>
                         <a href="#">Articles</a>
