--- a/WAD DEVELOPMENT/bootstrap/index.html
+++ b/WAD DEVELOPMENT/bootstrap/index.html
@@ -96,7 +96,7 @@
     </header>
 
    
-    <div class="container">
+    <div class="container" style="background-color: rgb(199, 199, 199)" >
 
         <div class="row">
             <div class="col-lg-9">
