--- a/WAD DEVELOPMENT/bootstrap/contact.html
+++ b/WAD DEVELOPMENT/bootstrap/contact.html
@@ -35,7 +35,7 @@
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="width:78%; margin-left:11%">
         <div class="container">
            
             <div class="navbar-header">
@@ -69,7 +69,7 @@
    
    
    
-    <div class="container">
+  <div class="container" style="background-color: #f2f2f2" >
 <br/>
 <br/>
 
