--- a/WAD DEVELOPMENT/bootstrap/index.html
+++ b/WAD DEVELOPMENT/bootstrap/index.html
@@ -260,14 +260,15 @@
 
             <div class="col-lg-3">
                 <br/>
-                              <form>
-<select name="users" onchange="showUser(this.value)">
-  <option value="">Select a Day:</option>
-  <option value="1">Monday</option>
-  <option value="2">Tuesday</option>
-  <option value="3">Wednesday</option>
-  <option value="4">Thursday</option>
-  </select>
+ <h2>Weather Forecast</h2>              
+<form>
+    <select name="users" onchange="showUser(this.value)">
+      <option value="">Select a Day:</option>
+      <option value="1">Monday</option>
+      <option value="2">Tuesday</option>
+      <option value="3">Wednesday</option>
+      <option value="4">Thursday</option>
+    </select>
 </form>
 <br>
 <div id="txtHint"><b>Weather info will be listed here...</b></div>
