--- a/WAD DEVELOPMENT/bootstrap/ajax.html
+++ b/WAD DEVELOPMENT/bootstrap/ajax.html
@@ -1,30 +1,26 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <body>
 
-<p id="demo">Let AJAX change this text.</p>
+<div id="demo"><h2>Let AJAX change this text</h2></div>
 
-<button type="button"
-onclick="loadDoc('test.txt', myFunction)">Change Content
-</button>
+<button type="button" onclick="loadDoc()">Change Content</button>
 
 <script>
-function loadDoc(url, cfunc) {
-  var xhttp;
-  xhttp=new XMLHttpRequest();
+function loadDoc() {
+  var xhttp = new XMLHttpRequest();
   xhttp.onreadystatechange = function() {
     if (xhttp.readyState == 4 && xhttp.status == 200) {
-      cfunc(xhttp);
+      document.getElementById("demo").innerHTML = xhttp.responseText;
     }
   };
-  xhttp.open("GET", url, true);
+  xhttp.open("GET", "ajax.txt", true);
   xhttp.send();
-}
-function myFunction(xhttp) {
-  document.getElementById("demo").innerHTML = xhttp.responseText;
 }
 </script>
 
 </body>
 </html>
+
  <h1><font color="#000000" size="+1"><marquee  direction="right" scrollamount="10">Your text here</marquee></font></h1>
